--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,4 +1,4 @@
-.sidebar ul {
+.ul {
     width: 17rem;
     background-color: #E6E6E6;
     height: 100vh;
@@ -11,7 +11,7 @@
     padding-top: 3rem;
 }
 
-a {
+.a {
     text-decoration: none;
     color: grey;
 
