--- a/src/components/Templates/firstTemplate/FirstTemplate.module.css
+++ b/src/components/Templates/firstTemplate/FirstTemplate.module.css
@@ -1,4 +1,4 @@
-.FirstTemplate .details {
+.details {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -7,15 +7,15 @@
     padding-top: 3rem;
 }
 
-.FirstTemplate .FirstTemplate_ul {
+.FirstTemplate_ul {
     padding-left: 44px;
 }
 
-.FirstTemplate .heading {
+.heading {
     padding: 10px 0px;
 }
 
-.FirstTemplate h2 {
+.h2 {
     text-align: left;
     margin: 0;
     background-color: cyan;
@@ -23,36 +23,32 @@
     padding: 0.3rem 1rem;
 }
 
-.FirstTemplate .wrapper {
+.wrapper {
     text-align: left;
     width: 65%;
 }
 
-.FirstTemplate .separator {
+.separator {
     padding: 20px 0px;
 }
 
-.FirstTemplate .personal_info_ul {
-    padding: 20px 0px;
-}
-
-.FirstTemplate .skill_wrapper {
-    padding: 20px;
-}
-
-/* .FirstTemplate .hobby_ul {
+/* .personal_info_ul {
     padding: 20px 0px;
 } */
 
-.FirstTemplate .description {
+.skill_wrapper {
+    padding: 20px;
+}
+
+.description {
     padding-left: 0px;
 }
 
-.FirstTemplate .description p {
+.p {
     padding: 10px 0px;
 }
 
-.FirstTemplate .active {
+/* .active {
     background-color: blue;
     color: white;
     padding: 5px 15px;
@@ -61,8 +57,12 @@
     &:hover {
         color: white;
     }
+} */
+
+.technical_skills {
+    padding-bottom: 1rem;
 }
 
-.FirstTemplate .technical_skills {
-    padding-bottom: 1rem;
+.hobby_ul {
+    padding: 20px 44px;
 }
