--- a/src/components/Templates/secondTemplate/TemplateSecond.module.css
+++ b/src/components/Templates/secondTemplate/TemplateSecond.module.css
@@ -1,4 +1,4 @@
-.TemplateSecond .details {
+.details {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -7,15 +7,15 @@
     padding-top: 3rem;
 }
 
-.TemplateSecond .TemplateSecond_ul {
+.TemplateSecond_ul {
     padding-left: 44px;
 }
 
-.TemplateSecond .heading {
+.heading {
     padding: 10px 0px;
 }
 
-.TemplateSecond h2 {
+.h2 {
     text-align: left;
     margin: 0;
     background-color: blue;
@@ -23,19 +23,19 @@
     padding: 0.3rem 1rem;
 }
 
-.TemplateSecond .wrapper {
+.wrapper {
     text-align: left;
     width: 65%;
     display: flex;
 }
 
-.TemplateSecond .separator {
+.separator {
     padding: 20px 0px;
 }
 
-.personal_info_ul {
+/* .personal_info_ul {
     padding: 20px 0px;
-}
+} */
 
 .skill_wrapper {
     padding: 20px;
@@ -44,18 +44,18 @@
 }
 
 .hobby_ul {
-    padding: 20px 0px;
+    padding: 20px 44px;
 }
 
-.TemplateSecond .description {
+.description {
     padding-left: 0px;
 }
 
-.description p {
+.p {
     padding: 10px 0px;
 }
 
-.TemplateSecond .active {
+/* .active {
     background-color: blue;
     color: white;
     padding: 5px 15px;
@@ -64,22 +64,22 @@
     &:hover {
         color: white;
     }
-}
+} */
 
-.TemplateSecond .left {
+.left {
     width: 50%;
     padding-right: 1rem;
 }
 
-.TemplateSecond .right {
+.right {
     width: 50%;
     padding-left: 1rem;
 }
 
-.TemplateSecond .technical_skills {
+.technical_skills {
     margin-bottom: 1rem;
 }
 
-.TemplateSecond .personal_details {
+.personal_details {
     width: 65%;
 }
